Fix for title not aligned on several lines

--- a/datafari-core/src/main/webapp/css/results.css
+++ b/datafari-core/src/main/webapp/css/results.css
@@ -16,3 +16,7 @@ CSS for Datafari modules
 @import "modules/query-elevator-module.css";
 
 body { overflow-y: scroll; }
+
+.title {
+ display: block; 
+}
